[package]
name = "check_address"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
encoding_rs = "0.8"
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
indicatif = "0.18"
